# pytorch2.0_ttnn

./: .gitmodules  PRIORITIES_STATUS.md  PR_BODY.md  README.md  build.md  ci_failed.md  gen_compile_commands.sh  git.ls  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  ttnn_ops_implemented.txt
.github/actions/common_repo_setup/: action.yaml
.github/workflows/: build-test-release-wheel.yaml  release-torch-ttnn-shutov.yaml  release-ttnn-shutov.yaml  run-accuracy-tests.yaml  run-cpp-native-tests.yaml  test-sim.yaml  update-readme.yaml  update-ttnn-wheel.yaml
docs/: PYPI_torch_ttnn_shutov.md  README.md.in
scripts/: build.md  build_cpp_direct.sh  build_cpp_extension_artifacts.sh  deps.md  direct.sh  gen_ttnn_ops.py  metal_checkout.sh  rewrite_compile_commands.py  run-cpp-extension-tests-only.sh  run-cpp-native-tests.sh  run_cpp_extension_tests.sh  tags  tt-metal.branch  v0.58.1.fix  v0.59.0-rc54_vs_rc53.diff  v0.59.0.fix  v0.59.1.fix  venv_recreate.sh
tests/: __init__.py  conftest.py  utils.py
tests/cpp_extension/: test_cpp_extension_functionality.py
tools/: ci_install_pypi_deps.sh  export_code.py  repack_ttnn_shutov_wheel.py
torch_ttnn/: __init__.py
torch_ttnn/cpp_extension/: CMakeLists.txt  build_cpp_extension.sh  pyproject.toml  setup.py  ttnn_device_mode.py
torch_ttnn/cpp_extension/cmake/: find_prebuilt_ttnn.cmake
torch_ttnn/cpp_extension/torch_ttnn_cpp_extension/: __init__.py
torch_ttnn/cpp_extension/ttnn_cpp_extension/examples/add/: main.cpp
torch_ttnn/cpp_extension/ttnn_cpp_extension/include/ttnn_cpp_extension/core/: TtnnCustomAllocator.hpp
torch_ttnn/cpp_extension/ttnn_cpp_extension/include/ttnn_cpp_extension/ops/: binary.hpp  random.hpp  reduction.hpp  unary.hpp
torch_ttnn/cpp_extension/ttnn_cpp_extension/include/ttnn_cpp_extension/utils/: autograd_wrap.hpp  binary_eager_wrappers.hpp  conv_pool_eager_register.hpp  conv_pool_eager_wrappers.hpp  device.hpp  eager_common.hpp  eager_wrap.hpp  extension_utils.hpp  random_eager_wrappers.hpp  reduction_eager_wrappers.hpp  unary_eager_register.hpp  unary_eager_wrappers.hpp
torch_ttnn/cpp_extension/ttnn_cpp_extension/src/: open_registration_extension.cpp
torch_ttnn/cpp_extension/ttnn_cpp_extension/src/core/: TtnnCustomAllocator.cpp  TtnnTensorImpl.cpp  copy.cpp
torch_ttnn/cpp_extension/ttnn_cpp_extension/src/ops/: binary.cpp  creation.cpp
torch_ttnn/cpp_extension/ttnn_cpp_extension/src/utils/: device.cpp  vector_utils.cpp
torch_ttnn/cpp_extension/ttsim_shim/: CMakeLists.txt  README.md  build_shim.sh  ttsim_shim.c
torch_ttnn/cpp_extension/utils/: get_torch_abi_flags.py
